// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Deberia tener el color del prop: background-color: #FF0000 1`] = `
<button
  class="sc-jzuGiw doIclZ"
  color="#FF0000"
  data-cy="submit"
>
  Login
</button>
`;

exports[`Button Debería tener ese color de bacñground: background-color: #4EB99F; 1`] = `
<button
  class="sc-jzuGiw doIclZ"
  data-cy="submit"
>
  Login
</button>
`;

exports[`Button should have the correct background color 1`] = `
<button
  class="sc-jzuGiw doIclZ"
  data-cy="submit"
>
  Login
</button>
`;

exports[`Button should have the correct background color: background-color: #4EB99F; 1`] = `
<button
  class="sc-jzuGiw doIclZ"
  data-cy="submit"
>
  Login
</button>
`;

exports[`Button should have the correct background color: background-color: #FF0000 1`] = `
<button
  class="sc-jzuGiw doIclZ"
  color="#FF0000"
  data-cy="submit"
>
  Login
</button>
`;
